--- a/package.json
+++ b/package.json
@@ -27,49 +27,49 @@
     "devDependencies": {
         "@testing-library/react": "^13.2.0",
         "@types/jest": "^26.0.15",
-        "@typescript-eslint/eslint-plugin": "^5.14.0",
-        "@typescript-eslint/eslint-plugin-tslint": "^5.14.0",
-        "@typescript-eslint/parser": "^5.14.0",
+        "@typescript-eslint/eslint-plugin": "^5.26.0",
+        "@typescript-eslint/eslint-plugin-tslint": "^5.26.0",
+        "@typescript-eslint/parser": "^5.26.0",
         "autoprefixer": "^10.4.2",
         "body-parser": "^1.16.1",
         "cssnano": "^5.0.8",
-        "eslint": "^7.32.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-import": "^2.24.2",
-        "eslint-plugin-jsdoc": "^37.0.3",
+        "eslint": "^8.16.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-jsdoc": "^39.3.2",
         "eslint-plugin-prefer-arrow": "^1.2.3",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react-hooks": "^4.5.0",
-        "eslint-plugin-unicorn": "^36.0.0",
+        "eslint-plugin-unicorn": "^42.0.0",
         "express": "^4.17.1",
         "express-http-proxy": "^1.6.0",
         "fork-ts-checker-webpack-plugin": "^6.3.4",
         "goban": "=0.5.91",
         "gulp": "^4.0.2",
         "gulp-clean-css": "^4.3.0",
-        "gulp-eslint7": "^0.3.2",
+        "gulp-eslint-new": "^1.4.4",
         "gulp-livereload": "^4.0.2",
         "gulp-postcss": "^9.0.0",
         "gulp-rename": "^2.0.0",
         "gulp-sourcemaps": "^2.6.5",
         "gulp-stylus": "^2.7.0",
         "html-minifier": "4.0.0",
-        "husky": "^7.0.0",
+        "husky": "^8.0.1",
         "jest": "^26.6.1",
         "lint-staged": "^12.1.7",
         "pofile": "^1.1.0",
         "postcss": "^8.3.9",
         "postcss-inline-svg": "^5.0.0",
-        "prettier": "2.4.1",
-        "prettier-eslint": "^13.0.0",
+        "prettier": "2.6.2",
+        "prettier-eslint": "^15.0.0",
         "pump": "^3.0.0",
         "source-map-loader": "^0.2.4",
         "stylus": "0.54.7",
         "supervisor": "^0.12.0",
         "ts-jest": "^26.4.3",
-        "ts-loader": "^9.2.7",
+        "ts-loader": "^9.3.0",
         "tslint": "^6.1.3",
-        "typescript": "^4.6.2",
+        "typescript": "^4.7.2",
         "webpack": "^5.70.0",
         "webpack-bundle-analyzer": "^4.5.0",
         "webpack-cli": "^4.9.2",
