--- a/package.json
+++ b/package.json
@@ -75,9 +75,11 @@
         "webpack-bundle-analyzer": "^4.5.0",
         "webpack-cli": "^4.9.2",
         "xgettext-js": "^3.0.0",
-        "yarn": "^1.22.18"
+        "yarn": "^1.22.19"
     },
     "dependencies": {
+        "@dnd-kit/core": "^6.0.3",
+        "@dnd-kit/sortable": "^7.0.0",
         "@sentry/browser": "^6.16.1",
         "@types/d3": "^5.7.2",
         "@types/howler": "^2.2.2",
@@ -115,7 +117,6 @@
         "react-resize-detector": "^7.1.1",
         "react-router-dom": "^6.3.0",
         "react-select": "^5.0.1",
-        "react-sortable-hoc": "^2.0.0",
         "react-split": "^2.0.9",
         "react-switch": "^5.0.1",
         "react-table": "^6.10.0",
