Downgraded back to react router 6.3 as 6.4 breaks stuff

--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
         "react-linkify": "^1.0.0-alpha",
         "react-number-format": "^3.0.2",
         "react-resize-detector": "^7.1.1",
-        "react-router-dom": "^6.4.1",
+        "react-router-dom": "=6.3.0",
         "react-select": "^5.0.1",
         "react-split": "^2.0.9",
         "react-switch": "^5.0.1",
