--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
         "autoprefixer": "^10.4.2",
         "body-parser": "^1.16.1",
         "circular-dependency-plugin": "^5.2.2",
-        "cssnano": "^5.0.8",
+        "cssnano": "^5.1.13",
+        "css-what": "^6.1.0",
         "eslint": "^8.23.1",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.26.0",
@@ -59,7 +60,7 @@
         "jest": "^26.6.1",
         "lint-staged": "^12.1.7",
         "pofile": "^1.1.0",
-        "postcss": "^8.3.9",
+        "postcss": "^8.4.16",
         "postcss-inline-svg": "^5.0.0",
         "prettier": "2.6.2",
         "prettier-eslint": "^15.0.0",
