--- a/Makefile.production
+++ b/Makefile.production
@@ -39,7 +39,7 @@ dev-put: push-cdn
 dev-del:
 	curl -X DELETE $(INDEX_HEADERS)  http://localhost:1080/_index
 
-beta-put: sync-translations audit-translations push-cdn upload-sentry-source-maps
+beta-put: sync-translations audit-translations jsonify-po-files push-cdn upload-sentry-source-maps
 	OGS_VERSION_HASH=$(OGS_VERSION_HASH) VENDOR_HASH=$(VENDOR_HASH) npm run minify-index --silent | curl -X PUT $(INDEX_HEADERS) -d @- https://beta.online-go.com/_index
 	make beta-notify-slack
 
@@ -78,6 +78,9 @@ sync-translations:
 
 audit-translations:
 	cd i18n; node audit-translations.js
+
+jsonify-po-files:
+	cd i18n; node jsonify-po-files.js
 
 prepare-cdn-files: purge-cdn-files dist/ogs.min.js dist/vendor.min.js dist/ogs.$(VERSION).css
 	echo "Language version: $(LANGUAGE_VERSION)"
