--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
         "react-switch": "^5.0.1",
         "react-table": "^6.10.0",
         "react-virtualized": "^9.22.3",
+        "resize-observer-polyfill": "^1.5.1",
         "redux": "^3.7.2",
         "sanitize-html": "^2.3.2",
         "socket.io-client": "4.3.2",
