--- a/docker-compose.uffizzi.yml
+++ b/docker-compose.uffizzi.yml
@@ -9,10 +9,14 @@ services:
 
   online-go:
     image: "${ONLINE_GO_IMAGE}"
-    container_name: online-go
+    entrypoint: /bin/sh
+    command: 
+      - "-c"
+      - "UFFIZZI_URL=$$UFFIZZI_URL/ npm run dev:uffizzi"
     ports:
       - "8080:8080"
     deploy:
           resources:
             limits:
               memory: 4000M
+  
