--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,19 +3,17 @@ error_log /var/log/nginx/error.log info;
 events {
     worker_connections 1024; #default
 }
+
+
 http {
     server {
 
         listen 8081;
 
         location / {
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-NginX-Proxy true;
-            proxy_pass http://127.0.0.1:8080/;
-            proxy_ssl_session_reuse off;
-            proxy_set_header Host $http_host;
-            proxy_redirect off;
+            proxy_pass http://127.0.0.1:8082;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $http_connection;
         }
     }
 }
