--- a/.github/workflows/uffizzi-build.yml
+++ b/.github/workflows/uffizzi-build.yml
@@ -1,4 +1,4 @@
-name: Build PR Image
+name: Preview (build)
 on:
   pull_request:
     types: [opened,synchronize,reopened,closed]
@@ -7,25 +7,29 @@ jobs:
   build-online-go:
     name: Build and Push `online-go`
     runs-on: ubuntu-latest
-    if: ${{ (github.event_name != 'pull_request' || github.event.action != 'closed')}}
+    if: ${{ github.event_name != 'pull_request' || github.event.action != 'closed' }}
     outputs:
       tags: ${{ steps.meta.outputs.tags }}
     steps:
-      - name: Checkout git repo
+      - name: checkout
         uses: actions/checkout@v3
+        
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
       - name: Generate UUID image name
         id: uuid
         run: echo "UUID_TAG_APP=$(uuidgen)" >> $GITHUB_ENV
+
       - name: Docker metadata
         id: meta
-        uses: docker/metadata-action@v3
+        uses: docker/metadata-action@v4
         with:
           images: registry.uffizzi.com/${{ env.UUID_TAG_APP }}
           tags: type=raw,value=60d
-      - name: Build and Push Image to registry.uffizzi.com ephemeral registry
-        uses: docker/build-push-action@v2
+
+      - name: Build Image
+        uses: docker/build-push-action@v3
         with:
           push: true
           context: ./
@@ -34,10 +38,8 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-
   render-compose-file:
     name: Render Docker Compose File
-    # Pass output of this workflow to another triggered by `workflow_run` event.
     runs-on: ubuntu-latest
     needs:
       - build-online-go
@@ -58,16 +60,11 @@ jobs:
           name: preview-spec
           path: docker-compose.rendered.yml
           retention-days: 2
-      - name: Serialize PR Event to File
-        run:  |
-          cat << EOF > event.json
-          ${{ toJSON(github.event) }}
-          EOF
       - name: Upload PR Event as Artifact
         uses: actions/upload-artifact@v3
         with:
           name: preview-spec
-          path: event.json
+          path: ${{ github.event_path }}
           retention-days: 2
 
   delete-preview:
@@ -76,11 +73,9 @@ jobs:
     if: ${{ github.event.action == 'closed' }}
     steps:
       # If this PR is closing, we will not render a compose file nor pass it to the next workflow.
-      - name: Serialize PR Event to File
-        run: echo '${{ toJSON(github.event) }}' > event.json
       - name: Upload PR Event as Artifact
         uses: actions/upload-artifact@v3
         with:
           name: preview-spec
-          path: event.json
+          path: ${{ github.event_path }}
           retention-days: 2
