Have uffizzi point to the beta backend, not production

--- a/.github/uffizzi/docker-compose.uffizzi.yml
+++ b/.github/uffizzi/docker-compose.uffizzi.yml
@@ -9,7 +9,8 @@ services:
   online-go:
     image: '${ONLINE_GO_IMAGE}'
     environment:
-      OGS_BACKEND: PRODUCTION
+      #OGS_BACKEND: PRODUCTION
+      OGS_BACKEND: BETA
     # entrypoint:
     # - "sh"
     # command:
