--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "husky": "^8.0.1",
         "jest": "^26.6.1",
         "lint-staged": "^12.1.7",
+        "nock": "^13.3.0",
         "pofile": "^1.1.0",
         "postcss": "^8.4.16",
         "postcss-inline-svg": "^5.0.0",
@@ -125,8 +126,8 @@
         "react-switch": "^5.0.1",
         "react-table": "^6.10.0",
         "react-virtualized": "^9.22.3",
-        "resize-observer-polyfill": "^1.5.1",
         "redux": "^3.7.2",
+        "resize-observer-polyfill": "^1.5.1",
         "sanitize-html": "^2.3.2",
         "socket.io-client": "4.3.2",
         "sweetalert2": "^11.4.17",
