--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
         "express": "^4.17.1",
         "express-http-proxy": "^1.6.0",
         "fork-ts-checker-webpack-plugin": "^6.3.4",
-        "goban": "=0.6.8",
+        "goban": "=0.6.11",
         "gulp": "^4.0.2",
         "gulp-clean-css": "^4.3.0",
         "gulp-eslint-new": "^1.7.1",
@@ -89,6 +89,7 @@
         "@types/jquery": "^2.0.34",
         "@types/markdown-it": "^0.0.4",
         "@types/moment-duration-format": "^2.2.2",
+        "@types/platform": "^1.3.4",
         "@types/query-string": "^5.0.1",
         "@types/react": "^18.0.20",
         "@types/react-autosuggest": "^10.1.5",
@@ -107,6 +108,7 @@
         "moment-duration-format": "^2.3.2",
         "moment-timezone": "^0.5.35",
         "performance-now": "^2.1.0",
+        "platform": "^1.3.6",
         "prop-types": "^15.5.0",
         "query-string": "^5.0.1",
         "react": "^18.2.0",
