wip: need to mock useNavigate()

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "webpack-watch": "webpack --watch --progress --color",
         "lint": "eslint src/ --ext=.ts,.tsx",
         "lint:fix": "eslint --fix src/ --ext=.ts,.tsx",
-        "test": "jest",
+        "test": "`jest`",
         "fresh-test": "clear && jest",
         "gulp": "gulp",
         "minify-index": "gulp minify-index --silent",
@@ -27,8 +27,10 @@
     ],
     "devDependencies": {
         "@google-cloud/translate": "^7.0.3",
+        "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.2.0",
         "@types/jest": "^26.0.15",
+        "@types/testing-library__jest-dom": "^5.14.5",
         "@typescript-eslint/eslint-plugin": "^5.47.1",
         "@typescript-eslint/eslint-plugin-tslint": "^5.47.1",
         "@typescript-eslint/parser": "^5.47.1",
