--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "html-minifier": "4.0.0",
         "husky": "^8.0.1",
         "jest": "^26.6.1",
+        "jest-chain": "^1.1.6",
         "lint-staged": "^12.1.7",
         "pofile": "^1.1.0",
         "postcss": "^8.4.16",
