Try to tell webpack about jest-chain

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,7 +43,8 @@
     "files": [
         "./src/main.tsx",
         "typings_manual/index.d.ts",
-        "node_modules/@types/jquery/index.d.ts"
+        "node_modules/@types/jquery/index.d.ts",
+        "node_modules/jest-chain/types/index.d.ts",
     ],
     "include": ["src"]
 }
