--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "@google-cloud/translate": "^7.0.3",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.2.0",
-        "@types/jest": "^26.0.15",
+        "@types/jest": "^29.5.0",
         "@types/testing-library__jest-dom": "^5.14.5",
         "@typescript-eslint/eslint-plugin": "^5.57.1",
         "@typescript-eslint/eslint-plugin-tslint": "^5.57.1",
@@ -62,7 +62,8 @@
         "gulp-stylus": "^2.7.0",
         "html-minifier": "4.0.0",
         "husky": "^8.0.1",
-        "jest": "^26.6.1",
+        "jest": "^29.5.0",
+        "jest-environment-jsdom": "^29.5.0",
         "jest-chain": "^1.1.6",
         "lint-staged": "^12.1.7",
         "pofile": "^1.1.0",
@@ -74,7 +75,7 @@
         "source-map-loader": "^4.0.0",
         "stylus": "0.59.0",
         "supervisor": "^0.12.0",
-        "ts-jest": "^26.4.3",
+        "ts-jest": "^29.1.0",
         "ts-loader": "^9.4.2",
         "tslint": "^6.1.3",
         "typescript": "^5.0.4",
