--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
         "ts-jest": "^29.1.0",
         "ts-loader": "^9.4.2",
         "tslint": "^6.1.3",
-        "typescript": "^5.0.4",
+        "_comment-about-typescript": "vvv current version of eslint-plugin requires this",
+        "typescript": "<5.2.0",
         "webpack": "^5.78.0",
         "webpack-bundle-analyzer": "^4.5.0",
         "webpack-cli": "^4.9.2",
@@ -96,9 +97,9 @@
         "@types/moment-duration-format": "^2.2.2",
         "@types/platform": "^1.3.4",
         "@types/query-string": "^5.0.1",
-        "@types/react": "^18.0.20",
+        "@types/react": "^18.0.28",
         "@types/react-autosuggest": "^10.1.5",
-        "@types/react-dom": "^18.0.6",
+        "@types/react-dom": "^18.0.11",
         "@types/react-virtualized": "^9.21.21",
         "@types/sanitize-html": "^1.22.0",
         "array-move": "^2.2.1",
