--- a/package.json
+++ b/package.json
@@ -31,23 +31,23 @@
         "@testing-library/react": "^13.2.0",
         "@types/jest": "^29.5.0",
         "@types/testing-library__jest-dom": "^5.14.5",
-        "@typescript-eslint/eslint-plugin": "^6.8.0",
-        "@typescript-eslint/eslint-plugin-tslint": "^6.8.0",
-        "@typescript-eslint/parser": "^6.8.0",
+        "@typescript-eslint/eslint-plugin": "^6.14.0",
+        "@typescript-eslint/eslint-plugin-tslint": "^6.14.0",
+        "@typescript-eslint/parser": "^6.14.0",
         "autoprefixer": "^10.4.16",
         "body-parser": "^1.16.1",
         "circular-dependency-plugin": "^5.2.2",
         "css-what": "^6.1.0",
         "cssnano": "^6.0.1",
         "deepl-node": "^1.10.1",
-        "eslint": "^8.51.0",
-        "eslint-config-prettier": "^9.0.0",
-        "eslint-plugin-import": "^2.28.1",
-        "eslint-plugin-jsdoc": "^46.8.2",
+        "eslint": "^8.55.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-jsdoc": "^46.9.1",
         "eslint-plugin-prefer-arrow": "^1.2.3",
         "eslint-plugin-prettier": "^5.0.1",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-unicorn": "^48.0.1",
+        "eslint-plugin-unicorn": "^49.0.0",
         "express": "^4.18.2",
         "express-http-proxy": "^2.0.0",
         "fork-ts-checker-webpack-plugin": "^9.0.0",
@@ -69,8 +69,8 @@
         "pofile": "^1.1.0",
         "postcss": "^8.4.16",
         "postcss-inline-svg": "^5.0.0",
-        "prettier": "3.0.3",
-        "prettier-eslint": "^16.1.1",
+        "prettier": "3.1.1",
+        "prettier-eslint": "^16.1.2",
         "pump": "^3.0.0",
         "source-map-loader": "^4.0.0",
         "stylus": "0.60.0",
@@ -78,7 +78,7 @@
         "ts-jest": "^29.1.1",
         "ts-loader": "^9.5.0",
         "tslint": "^6.1.3",
-        "typescript": "<5.3",
+        "typescript": "^5.3.3",
         "webpack": "^5.89.0",
         "webpack-bundle-analyzer": "^4.5.0",
         "webpack-cli": "^5.1.4",
