--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
         "cacheable",
         "chillout",
         "clearpen",
+        "covay",
         "crosshairs",
         "csrfmiddlewaretoken",
         "csrftoken",
@@ -54,8 +55,10 @@
         "josekis",
         "Kata",
         "katago",
+        "kidsgoserver",
         "Leela",
         "lerp",
+        "localstorage",
         "malkovich",
         "MDPI",
         "meijin",
@@ -104,6 +107,7 @@
         "unitify",
         "Unranked",
         "uservoice",
+        "usgc",
         "wbaduk",
         "Weiqi",
         "yesno",
