Fix spelling errors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "annulable",
         "anoek",
         "apikey",
+        "appinfo",
         "automatch",
         "automatcher",
         "automatchers",
@@ -18,6 +19,8 @@
         "Baduk",
         "badukpop",
         "benjito",
+        "bitfield",
+        "boardsize",
         "byoyomi",
         "cacheable",
         "chillout",
@@ -26,16 +29,23 @@
         "crosshairs",
         "csrfmiddlewaretoken",
         "csrftoken",
+        "cssnano",
+        "DATETIME",
         "dedup",
+        "deinit",
         "deinitialize",
         "Dismissable",
         "dont",
+        "DOTCSS",
+        "DOTJS",
         "enableable",
         "Errcode",
         "fakelink",
+        "fuggly",
         "Fuseki",
         "gamedata",
         "gamelist",
+        "gettext",
         "glicko",
         "goban",
         "Gobans",
@@ -53,9 +63,11 @@
         "joseki",
         "josekipedia",
         "josekis",
+        "jsonify",
         "Kata",
         "katago",
         "kidsgoserver",
+        "kyus",
         "Leela",
         "lerp",
         "localstorage",
@@ -66,35 +78,47 @@
         "minigoban",
         "misclick",
         "misclicks",
+        "modlog",
+        "msgid",
         "ngettext",
         "nochallenge",
         "nodetails",
         "noextracontrols",
         "nolink",
         "npgettext",
+        "nums",
+        "offtopic",
+        "omnisearch",
+        "opengotha",
         "pgettext",
         "playouts",
+        "pluralidx",
         "postback",
         "rengo",
         "replot",
+        "roundrobin",
         "rrule",
         "seekgraph",
         "Seki",
         "semeai",
+        "sepa",
         "shadowban",
         "shadowbanned",
         "shownotesindicator",
         "Sitewide",
         "slowstrobe",
+        "sodos",
         "styl",
         "sublicensable",
         "subprops",
         "subselect",
         "subtool",
+        "superchat",
         "superko",
         "swal",
         "sweetalert",
         "tenuki",
+        "testuser",
         "tesuji",
         "Timecop",
         "tock",
@@ -102,14 +126,17 @@
         "tsumegodojo",
         "tygem",
         "tzoffset",
+        "uffizzi",
         "unannulable",
         "unhighlight",
         "unitify",
         "Unranked",
+        "unstarted",
         "uservoice",
         "usgc",
         "wbaduk",
         "Weiqi",
+        "xgettext",
         "yesno",
         "yike",
         "yomi",
