--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "webpack-watch": "webpack --watch --progress --color",
         "lint": "eslint src/ --ext=.ts,.tsx",
         "lint:fix": "eslint --fix src/ --ext=.ts,.tsx",
+        "cspell": "cspell 'src/**/*.{ts,tsx}'",
         "test": "jest",
         "fresh-test": "clear && jest",
         "gulp": "gulp",
@@ -104,6 +105,7 @@
         "@types/react-virtualized": "^9.21.21",
         "@types/sanitize-html": "^1.22.0",
         "array-move": "^2.2.1",
+        "cspell": "^8.3.2",
         "d3": "^7.6.1",
         "eventemitter3": "^4.0.7",
         "howler": "^2.2.1",
