Add cspell check to our CI pipeline

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,6 +60,10 @@ jobs:
       - name: Tests
         run: npx jest
 
+      - uses: streetsidesoftware/cspell-action@v5
+        with:
+            files: src/**/*.{ts,tsx}
+
       # Log compressed output size
       - name: Compressed sizes
         run: |
