--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "test": "jest",
         "fresh-test": "clear && jest",
         "gulp": "gulp",
+        "spellcheck": "cspell \"src/**/*.{ts,tsx}\"",
         "minify-index": "gulp minify-index --silent",
         "analyze": "webpack --mode production --profile --optimization-minimize --devtool=source-map",
         "yarn": "yarn"
@@ -41,6 +42,7 @@
         "circular-dependency-plugin": "^5.2.2",
         "css-what": "^6.1.0",
         "cssnano": "^6.0.1",
+        "cspell": "^8.3.2",
         "deepl-node": "^1.10.1",
         "eslint": "^8.55.0",
         "eslint-config-prettier": "^9.1.0",
@@ -144,7 +146,8 @@
     },
     "lint-staged": {
         "src/**/*.{ts,tsx}": [
-            "eslint"
+            "eslint",
+            "cspell"
         ]
     },
     "overrides": {
