--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
         "@typescript-eslint/eslint-plugin-tslint": "^6.14.0",
         "@typescript-eslint/parser": "^6.14.0",
         "autoprefixer": "^10.4.16",
-        "body-parser": "^1.16.1",
+        "body-parser": "^1.20.2",
         "circular-dependency-plugin": "^5.2.2",
         "css-what": "^6.1.0",
         "cssnano": "^6.0.1",
         "cspell": "^8.3.2",
         "deepl-node": "^1.10.1",
-        "eslint": "^8.55.0",
+        "eslint": "^8.56.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-jsdoc": "^46.9.1",
@@ -62,7 +62,7 @@
         "gulp-livereload": "^4.0.2",
         "gulp-postcss": "^9.0.0",
         "gulp-rename": "^2.0.0",
-        "gulp-sourcemaps": "^2.6.5",
+        "gulp-sourcemaps": "^3.0.0",
         "gulp-stylus": "^2.7.0",
         "html-minifier": "4.0.0",
         "husky": "^8.0.1",
@@ -95,7 +95,7 @@
         "@sentry/browser": "^7.15.0",
         "@types/d3": "^7.4.0",
         "@types/howler": "^2.2.2",
-        "@types/jquery": "^2.0.34",
+        "@types/jquery": "^2.0.41",
         "@types/markdown-it": "^0.0.4",
         "@types/moment-duration-format": "^2.2.2",
         "@types/platform": "^1.3.4",
@@ -107,11 +107,11 @@
         "@types/sanitize-html": "^1.22.0",
         "array-move": "^2.2.1",
         "d3": "^7.6.1",
-        "eventemitter3": "^4.0.7",
+        "eventemitter3": "^5.0.0",
         "howler": "^2.2.1",
         "jquery": "^3.6.0",
         "js-noise": "^0.1.3",
-        "jsonwebtoken": "^9.0.0",
+        "jsonwebtoken": "=9.0.2",
         "markdown-it": "^12.3.2",
         "moment": "^2.29.4",
         "moment-duration-format": "^2.3.2",
