--- a/package.json
+++ b/package.json
@@ -122,7 +122,7 @@
         "query-string": "^5.0.1",
         "react": "^18.2.0",
         "react-autosuggest": "^10.1.0",
-        "react-charts": "^3.0.0-beta.36",
+        "react-charts": "=3.0.0-beta.36",
         "react-datetime": "^3.0.4",
         "react-dom": "^18.2.0",
         "react-dropzone": "^12.0.5",
