--- a/package.json
+++ b/package.json
@@ -92,8 +92,8 @@
     "dependencies": {
         "@dnd-kit/core": "^6.0.3",
         "@dnd-kit/sortable": "^7.0.0",
-        "@nivo/core": "^0.85.1",
-        "@nivo/line": "^0.85.1",
+        "@nivo/core": "=0.84.0",
+        "@nivo/line": "=0.84.0",
         "@sentry/browser": "^7.92.0",
         "@types/d3": "^7.4.0",
         "@types/howler": "^2.2.2",
