--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
         "@hapi/joi": "^17.1.1",
         "@nivo/core": "=0.84.0",
         "@nivo/line": "=0.84.0",
-        "@nivo/pie": "^0.85.1",
+        "@nivo/pie": "=0.84.0",
         "@sentry/browser": "^7.92.0",
         "@types/d3": "^7.4.0",
         "@types/howler": "^2.2.2",
