--- a/package.json
+++ b/package.json
@@ -34,9 +34,8 @@
         "@types/react-linkify": "^1.0.4",
         "@types/testing-library__jest-dom": "^5.14.5",
         "@types/valid-url": "^1.0.7",
-        "@typescript-eslint/eslint-plugin": "^7.7.0",
-        "@typescript-eslint/eslint-plugin-tslint": "^7.0.2",
-        "@typescript-eslint/parser": "^7.7.0",
+        "@typescript-eslint/eslint-plugin": "^7.13.1",
+        "@typescript-eslint/parser": "^7.13.1",
         "autoprefixer": "^10.4.19",
         "body-parser": "^1.20.2",
         "circular-dependency-plugin": "^5.2.2",
@@ -46,6 +45,7 @@
         "deepl-node": "^1.10.1",
         "eslint": "^8.56.0",
         "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-header": "^3.1.1",
         "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-jsdoc": "^46.9.1",
         "eslint-plugin-prefer-arrow": "^1.2.3",
@@ -81,7 +81,6 @@
         "supervisor": "^0.12.0",
         "ts-jest": "^29.1.1",
         "ts-loader": "^9.5.1",
-        "tslint": "^6.1.3",
         "typescript": "=5.4.5",
         "webpack": "^5.91.0",
         "webpack-bundle-analyzer": "^4.10.2",
