--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
         "@types/sanitize-html": "^1.22.0",
         "array-move": "^2.2.1",
         "d3": "^7.6.1",
+        "date-fns": "^3.6.0",
         "eventemitter3": "^5.0.0",
         "howler": "^2.2.1",
         "jquery": "^3.6.0",
