--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
         "prettier:check": "prettier --check \"src/**/*.{ts,tsx}\"",
         "webpack": "webpack",
         "webpack-watch": "webpack --watch --progress --color",
-        "lint": "eslint src/ --ext=.ts,.tsx",
-        "lint:fix": "eslint --fix src/ --ext=.ts,.tsx",
+        "lint": "eslint src/ --ext=.ts,.tsx -c .eslint.config.js",
+        "lint:fix": "eslint --fix src/ --ext=.ts,.tsx -c .eslint.config.js",
         "test": "jest",
         "fresh-test": "clear && jest",
         "gulp": "gulp",
