--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "prettier:check": "prettier --check \"src/**/*.{ts,tsx}\"",
         "webpack": "webpack",
         "webpack-watch": "webpack --watch --progress --color",
-        "lint": "eslint src/ --ext=.ts,.tsx -c .eslintrc.js",
+        "lint": "eslint src/",
+        "lintold": "eslint src/ --ext=.ts,.tsx -c .eslintrc.js",
         "lint:fix": "eslint --fix src/ --ext=.ts,.tsx -c .eslintrc.js",
         "test": "jest",
         "fresh-test": "clear && jest",
@@ -27,6 +28,9 @@
         "defaults"
     ],
     "devDependencies": {
+        "@eslint/compat": "^1.1.1",
+        "@eslint/eslintrc": "^3.1.0",
+        "@eslint/js": "^9.7.0",
         "@google-cloud/translate": "^7.0.3",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.2.0",
@@ -55,6 +59,7 @@
         "express": "^4.19.2",
         "express-http-proxy": "^2.0.0",
         "fork-ts-checker-webpack-plugin": "^9.0.0",
+        "globals": "^15.8.0",
         "goban": "=8.3.16",
         "gulp": "^5.0.0",
         "gulp-clean-css": "^4.3.0",
