--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
         "@types/react-linkify": "^1.0.4",
         "@types/testing-library__jest-dom": "^5.14.5",
         "@types/valid-url": "^1.0.7",
-        "@typescript-eslint/eslint-plugin": "^7.13.1",
-        "@typescript-eslint/parser": "^7.13.1",
+        "@typescript-eslint/eslint-plugin": "^7.16.1",
+        "@typescript-eslint/parser": "^7.16.1",
         "autoprefixer": "^10.4.19",
         "body-parser": "^1.20.2",
         "circular-dependency-plugin": "^5.2.2",
@@ -47,9 +47,9 @@
         "css-what": "^6.1.0",
         "cssnano": "^6.0.1",
         "deepl-node": "^1.10.1",
-        "eslint": "^8.56.0",
+        "eslint": "^9.7.0",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-header": "^3.1.1",
+        "@tony.ganchev/eslint-plugin-header": "^3.1.2",
         "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-jsdoc": "^46.9.1",
         "eslint-plugin-prefer-arrow": "^1.2.3",
@@ -63,7 +63,7 @@
         "goban": "=8.3.16",
         "gulp": "^5.0.0",
         "gulp-clean-css": "^4.3.0",
-        "gulp-eslint-new": "^2.0.0",
+        "gulp-eslint-new": "^2.2.0",
         "gulp-livereload": "^4.0.2",
         "gulp-postcss": "^9.0.0",
         "gulp-rename": "^2.0.0",
