Give moderators a view of the outcomes over time for each CM.

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@google-cloud/translate": "^7.0.3",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.2.0",
+        "@tony.ganchev/eslint-plugin-header": "^3.1.2",
         "@types/jest": "^29.5.0",
         "@types/react-linkify": "^1.0.4",
         "@types/testing-library__jest-dom": "^5.14.5",
@@ -49,7 +50,6 @@
         "deepl-node": "^1.10.1",
         "eslint": "^9.7.0",
         "eslint-config-prettier": "^9.1.0",
-        "@tony.ganchev/eslint-plugin-header": "^3.1.2",
         "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-jsdoc": "^46.9.1",
         "eslint-plugin-prefer-arrow": "^1.2.3",
@@ -142,6 +142,7 @@
         "react-split": "^2.0.9",
         "react-switch": "^5.0.1",
         "react-table": "^6.10.0",
+        "react-tabs": "^6.0.2",
         "react-virtualized": "^9.22.3",
         "redux": "^3.7.2",
         "sanitize-html": "^2.12.1",
