--- a/i18n/Makefile
+++ b/i18n/Makefile
@@ -14,4 +14,20 @@ build/countries.json: cldr/common
 	mkdir -p build
 	./gen-country-lists.py
 
+dev-run-translation-scripts:
+	cp ../dist/ogs.js build/ogs.strings.js
+	cp ../dist/ogs.js.map build/ogs.strings.js.map
+	sed -i 's/ogs.js.map/ogs.strings.js.map/' build/ogs.strings.js
+	python translation-code-replace-for-parsing.py
+	# Create a unified pot file script is run on the translation server typically
+	node create-unified-pot.js llm-translation-extraction
+	node audit-translations.js
+	node jsonify-po-files.js
+
+audit:
+	node audit-translations.js
+
+po:
+	node jsonify-po-files.js
+
 -include Makefile.production
