--- a/package.json
+++ b/package.json
@@ -43,8 +43,6 @@
         "body-parser": "^1.20.2",
         "circular-dependency-plugin": "^5.2.2",
         "cspell": "^8.3.2",
-        "css-what": "^6.1.0",
-        "cssnano": "^6.0.1",
         "deepl-node": "^1.10.1",
         "esbuild-plugin-react-virtualized": "^1.0.4",
         "eslint": "^9.7.0",
@@ -57,7 +55,6 @@
         "eslint-plugin-unicorn": "^49.0.0",
         "express": "^4.19.2",
         "express-http-proxy": "^2.0.0",
-        "fork-ts-checker-webpack-plugin": "^9.0.0",
         "globals": "^15.8.0",
         "goban": "=8.3.61",
         "html-minifier": "4.0.0",
@@ -140,8 +137,7 @@
         "sanitize-html": "^2.12.1",
         "sweetalert2": "^11.4.17",
         "ts-md5": "^1.3.1",
-        "valid-url": "^1.0.9",
-        "whatwg-fetch": "^3.0.0"
+        "valid-url": "^1.0.9"
     },
     "lint-staged": {
         "src/**/*.{ts,tsx}": [
