--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
         "sanitize-html": "^2.12.1",
         "sweetalert2": "^11.4.17",
         "ts-md5": "^1.3.1",
+        "ts-node": "^10.9.2",
         "valid-url": "^1.0.9",
         "whatwg-fetch": "^3.0.0"
     },
