--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@eslint/eslintrc": "^3.1.0",
         "@eslint/js": "^9.7.0",
         "@google-cloud/translate": "^7.0.3",
+        "@rollup/plugin-commonjs": "^28.0.0",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.2.0",
         "@tony.ganchev/eslint-plugin-header": "^3.1.2",
@@ -76,7 +77,7 @@
         "ts-jest": "^29.1.1",
         "ts-loader": "^9.5.1",
         "typescript": "=5.5.4",
-        "vite": "^5.4.3",
+        "vite": "^5.4.8",
         "vite-express": "^0.19.0",
         "xgettext-js": "^3.0.0",
         "yarn": "^1.22.19"
