Set overwrite to true in upload action

--- a/.github/workflows/uffizzi-build.yml
+++ b/.github/workflows/uffizzi-build.yml
@@ -66,6 +66,7 @@ jobs:
           name: preview-spec
           path: ${{ github.event_path }}
           retention-days: 2
+          overwrite: true
 
   delete-preview:
     name: Call for Preview Deletion
