--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
         "defaults"
     ],
     "devDependencies": {
-        "@eslint/compat": "^1.1.1",
-        "@eslint/eslintrc": "^3.1.0",
-        "@eslint/js": "^9.7.0",
+        "@eslint/compat": "^1.2.4",
+        "@eslint/eslintrc": "^3.2.0",
+        "@eslint/js": "=9.14.0",
         "@google-cloud/translate": "^7.0.3",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.2.0",
@@ -40,8 +40,9 @@
         "@types/react-linkify": "^1.0.4",
         "@types/testing-library__jest-dom": "^5.14.5",
         "@types/valid-url": "^1.0.7",
-        "@typescript-eslint/eslint-plugin": "^7.16.1",
-        "@typescript-eslint/parser": "^7.16.1",
+        "@typescript-eslint/eslint-plugin": "^8.18.0",
+        "@typescript-eslint/parser": "^8.18.0",
+        "@stylistic/eslint-plugin": "^2.12.0",
         "autoprefixer": "^10.4.19",
         "body-parser": "^1.20.2",
         "circular-dependency-plugin": "^5.2.2",
@@ -49,13 +50,13 @@
         "css-what": "^6.1.0",
         "cssnano": "^6.0.1",
         "deepl-node": "^1.10.1",
-        "eslint": "^9.7.0",
+        "eslint": "=9.14.0",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-import": "^2.29.1",
-        "eslint-plugin-jsdoc": "^46.9.1",
+        "eslint-plugin-import": "^2.31.0",
+        "eslint-plugin-jsdoc": "^50.6.0",
         "eslint-plugin-prefer-arrow": "^1.2.3",
-        "eslint-plugin-prettier": "^5.1.3",
-        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-unicorn": "^49.0.0",
         "express": "^4.19.2",
         "express-http-proxy": "^2.0.0",
@@ -64,12 +65,12 @@
         "goban": "=8.3.72",
         "gulp": "^5.0.0",
         "gulp-clean-css": "^4.3.0",
-        "gulp-eslint-new": "^2.2.0",
+        "gulp-eslint-new": "^2.4.0",
         "gulp-livereload": "^4.0.2",
         "gulp-postcss": "^9.0.0",
         "gulp-rename": "^2.0.0",
         "gulp-sourcemaps": "^3.0.0",
-        "gulp-stylus": "^2.7.0",
+        "gulp-stylus": "^3.0.1",
         "html-minifier": "4.0.0",
         "husky": "^8.0.1",
         "jest": "^29.7.0",
@@ -84,12 +85,12 @@
         "prettier-eslint": "^16.3.0",
         "pump": "^3.0.0",
         "source-map-loader": "^4.0.0",
-        "stylus": "0.60.0",
+        "stylus": "0.64.0",
         "supervisor": "^0.12.0",
-        "ts-jest": "^29.1.1",
+        "ts-jest": "^29.2.5",
         "ts-loader": "^9.5.1",
-        "typescript": "=5.5.4",
-        "webpack": "^5.94.0",
+        "typescript": "=5.7.2",
+        "webpack": "^5.97.1",
         "webpack-bundle-analyzer": "^4.10.2",
         "webpack-cli": "^5.1.4",
         "xgettext-js": "^3.0.0",
