Add stylus-supremacy cli tool

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "lint": "eslint src/",
         "lintold": "eslint src/ --ext=.ts,.tsx -c .eslintrc.js",
         "lint:fix": "eslint --fix src/ --ext=.ts,.tsx -c .eslintrc.js",
+        "stylus-supremacy": "stylus-supremacy format --replace --options .vscode/settings.json 'src/**/*.styl'",
         "test": "jest",
         "fresh-test": "clear && jest",
         "gulp": "gulp",
@@ -86,6 +87,7 @@
         "pump": "^3.0.0",
         "source-map-loader": "^4.0.0",
         "stylus": "0.64.0",
+        "stylus-supremacy": "4.0.0",
         "supervisor": "^0.12.0",
         "ts-jest": "^29.2.5",
         "ts-loader": "^9.5.1",
