--- a/package.json
+++ b/package.json
@@ -9,21 +9,20 @@
         "npm": ">=8.5.0"
     },
     "scripts": {
-        "dev": "supervisor -w Gulpfile.js,webpack.config.js,tsconfig.json supervisor -w Gulpfile.js -x gulp --",
+        "dev": "vite",
+        "vite": "vite",
+        "build": "vite build",
         "prettier": "prettier --write \"src/**/*.{ts,tsx}\"",
         "prettier:check": "prettier --check \"src/**/*.{ts,tsx}\"",
-        "webpack": "webpack",
-        "webpack-watch": "webpack --watch --progress --color",
         "lint": "eslint src/",
-        "lintold": "eslint src/ --ext=.ts,.tsx -c .eslintrc.js",
-        "lint:fix": "eslint --fix src/ --ext=.ts,.tsx -c .eslintrc.js",
+        "lint:fix": "eslint --fix src/",
         "stylus-supremacy": "stylus-supremacy format --replace --options .vscode/settings.json 'src/**/*.styl'",
         "test": "jest",
         "fresh-test": "clear && jest",
         "gulp": "gulp",
         "spellcheck": "cspell \"src/**/*.{ts,tsx}\"",
         "minify-index": "gulp minify-index --silent",
-        "analyze": "webpack --mode production --profile --optimization-minimize --devtool=source-map",
+        "dependency-cruiser": "dependency-cruiser src",
         "yarn": "yarn"
     },
     "browserslist": [
@@ -52,17 +51,20 @@
         "@types/react-autosuggest": "^10.1.5",
         "@types/react-dom": "^18.0.11",
         "@types/react-virtualized": "^9.21.21",
-        "@types/sanitize-html": "^1.22.0",
+        "@types/sanitize-html": "^2.13.0",
         "@typescript-eslint/eslint-plugin": "^8.18.0",
         "@typescript-eslint/parser": "^8.18.0",
         "@stylistic/eslint-plugin": "^2.12.0",
+        "@vitejs/plugin-basic-ssl": "^1.2.0",
+        "@vitejs/plugin-react": "^4.3.4",
         "autoprefixer": "^10.4.19",
         "body-parser": "^1.20.2",
-        "circular-dependency-plugin": "^5.2.2",
         "cspell": "^8.3.2",
         "css-what": "^6.1.0",
         "cssnano": "^6.0.1",
+        "dependency-cruiser": "^16.8.0",
         "deepl-node": "^1.10.1",
+        "esbuild-plugin-react-virtualized": "^1.0.4",
         "eslint": "=9.14.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.31.0",
@@ -73,7 +75,6 @@
         "eslint-plugin-unicorn": "^49.0.0",
         "express": "^4.19.2",
         "express-http-proxy": "^2.0.0",
-        "fork-ts-checker-webpack-plugin": "^9.0.0",
         "globals": "^15.8.0",
         "goban": "=8.3.72",
         "gulp": "^5.0.0",
@@ -101,13 +102,13 @@
         "stylus": "0.64.0",
         "stylus-supremacy": "4.0.0",
         "supervisor": "^0.12.0",
+        "terser": "^5.37.0",
         "ts-jest": "^29.2.5",
         "ts-loader": "^9.5.1",
         "typescript": "=5.7.2",
-        "webpack": "^5.97.1",
-        "webpack-bundle-analyzer": "^4.10.2",
-        "webpack-cli": "^5.1.4",
         "xgettext-js": "^3.0.0",
+        "vite": "^6.0.7",
+        "vite-plugin-checker": "^0.8.0",
         "yarn": "^1.22.19"
     },
     "dependencies": {
@@ -149,7 +150,7 @@
         "react-tabs": "^6.0.2",
         "react-virtualized": "^9.22.3",
         "redux": "^3.7.2",
-        "sanitize-html": "^2.12.1",
+        "sanitize-html": "^2.14.0",
         "sweetalert2": "^11.4.17",
         "ts-md5": "^1.3.1",
         "valid-url": "^1.0.9",
