WIP removing webpack/gulp and updating deployment targets

--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
         "lint": "eslint src/",
         "lint:fix": "eslint --fix src/",
         "stylus-supremacy": "stylus-supremacy format --replace --options .vscode/settings.json 'src/**/*.styl'",
+        "stylus": "stylus --out dist/ --compress --include-css --sourcemap -c src/ogs.styl",
         "test": "jest",
         "fresh-test": "clear && jest",
-        "gulp": "gulp",
         "spellcheck": "cspell \"src/**/*.{ts,tsx}\"",
-        "minify-index": "gulp minify-index --silent",
+        "minify-index": "node minify-index.js",
         "dependency-cruiser": "dependency-cruiser src",
         "yarn": "yarn"
     },
@@ -53,12 +53,13 @@
         "@types/react-dom": "^18.0.11",
         "@types/react-virtualized": "^9.21.21",
         "@types/sanitize-html": "^2.13.0",
+        "@types/postcss-import": "^14.0.3",
         "@typescript-eslint/eslint-plugin": "^8.18.0",
         "@typescript-eslint/parser": "^8.18.0",
         "@stylistic/eslint-plugin": "^2.12.0",
         "@vitejs/plugin-basic-ssl": "^1.2.0",
         "@vitejs/plugin-react": "^4.3.4",
-        "autoprefixer": "^10.4.19",
+        "autoprefixer": "^10.4.20",
         "body-parser": "^1.20.2",
         "cspell": "^8.3.2",
         "css-what": "^6.1.0",
@@ -78,14 +79,6 @@
         "express-http-proxy": "^2.0.0",
         "globals": "^15.8.0",
         "goban": "=8.3.72",
-        "gulp": "^5.0.0",
-        "gulp-clean-css": "^4.3.0",
-        "gulp-eslint-new": "^2.4.0",
-        "gulp-livereload": "^4.0.2",
-        "gulp-postcss": "^9.0.0",
-        "gulp-rename": "^2.0.0",
-        "gulp-sourcemaps": "^3.0.0",
-        "gulp-stylus": "^3.0.1",
         "html-minifier": "4.0.0",
         "husky": "^8.0.1",
         "jest": "^29.7.0",
@@ -94,8 +87,9 @@
         "lint-staged": "^15.2.2",
         "openai": "^4.57.3",
         "pofile": "^1.1.0",
-        "postcss": "^8.4.16",
-        "postcss-inline-svg": "^5.0.0",
+        "postcss": "^8.4.49",
+        "postcss-import": "^16.1.0",
+        "postcss-inline-svg": "^6.0.0",
         "prettier": "3.1.1",
         "prettier-eslint": "^16.3.0",
         "pump": "^3.0.0",
