Update a few libraries to reduce the number of things complaining about react 19 peer dependencies

--- a/package.json
+++ b/package.json
@@ -106,11 +106,12 @@
         "@dnd-kit/core": "^6.0.3",
         "@dnd-kit/sortable": "^7.0.0",
         "@hapi/joi": "^17.1.1",
-        "@nivo/core": "^0.87.0",
-        "@nivo/line": "^0.87.0",
-        "@nivo/pie": "^0.87.0",
+        "@nivo/core": "^0.88.0",
+        "@nivo/line": "^0.88.0",
+        "@nivo/pie": "^0.88.0",
         "@sentry/browser": "^7.92.0",
         "array-move": "^2.2.1",
+        "classnames": "^2.5.1",
         "d3": "^7.6.1",
         "date-fns": "^3.6.0",
         "eventemitter3": "^5.0.0",
@@ -129,7 +130,7 @@
         "query-string": "^5.0.1",
         "react": "^19.0.0",
         "react-autosuggest": "^10.1.0",
-        "react-datetime": "^3.0.4",
+        "react-datetime": "^3.3.1",
         "react-dom": "^19.0.0",
         "react-dropzone": "^12.0.5",
         "react-dynamic-help": "^3.1.2",
@@ -137,7 +138,7 @@
         "react-router-dom": "=6.3.0",
         "react-select": "^5.9.0",
         "react-split": "^2.0.9",
-        "react-switch": "7.0.0",
+        "react-switch": "7.1.0",
         "react-table": "^6.10.0",
         "react-tabs": "^6.0.2",
         "react-virtualized": "^9.22.5",
